--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -1,18 +1,72 @@
 .orangebackground{
     background-color: #F15A24;
+    width: 100%;
+    height: 100%;
 }
 
 .vacancydatetext{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    font-weight: bold;
 }
 
 .functiontext{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
+    color: white;
 }
 
 .descriptiontext{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    font-style: italic; 
+    font-weight: bold;
 }
+
+.hexa, .hexa div {
+    margin: 0 auto;
+    transform-origin: 50% 50%;
+    overflow: hidden;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    
+            
+}
+/* .hexa {
+    width: 260px;
+    height: 184px;
+    
+}
+.hexa div {
+    width: 90%;
+    height: 100%; */
+    
+}
+/* .hexa {
+    transform: rotate(120deg);
+    transform: rotate(120deg);
+    transform: rotate(120deg);
+}
+.hex1 {
+    transform: rotate(-60deg);
+    transform: rotate(-60deg);
+    transform: rotate(-60deg);
+}
+
+.hex2 {
+    transform: rotate(-60deg);
+    transform: rotate(-60deg);
+    transform: rotate(-60deg);
+    background: #333333;
+} */
+/* 
+.img {
+    width: 50%; 
+    height: 70%;
+    margin-left: auto;
+    margin-top: 25px;
+    margin-right: auto;
+    background-color: white;
+    color: white;
+} */
