--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,7 +3,7 @@
 .header{
     background-color: #333333;
     color: white;
-    height: 200px;
+    height: 10%;
     width: 100%;
     font-family: 'bebas_neueregular';
     padding: 0px;
@@ -15,33 +15,6 @@
     background-color: #333333;
     width: 50%;
     height: auto;
-    Margin-top: 20px;
-}
-
-.menu-icon{
-    background-color: #333333;
-    color: white; 
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    width: 80px;
-    height: 40px;
-    cursor: pointer; }
-    .menu-icon::after {
-      position: absolute;
-      top: 70px;
-      left: 325px;
-      display: block;
-      width: 100%;
-      height: 5px;
-      background: #fefefe;
-      -webkit-box-shadow: 0 7px 0 #fefefe, 0 14px 0 #fefefe;
-              box-shadow: 0 7px 0 #fefefe, 0 14px 0 #fefefe;
-      content: ''; }
-    .menu-icon:hover::after {
-      background: #cacaca;
-      -webkit-box-shadow: 0 7px 0 #cacaca, 0 14px 0 #cacaca;
-              box-shadow: 0 7px 0 #cacaca, 0 14px 0 #cacaca; 
 }
 
 .triangle{
@@ -64,27 +37,32 @@
 /* FOOTER FEATURES */
 
 .footer{
-    position: relative;
     background-color: #333333;
     color: white;
-    height: 250px;
+    height: 10%;
     width: 100%;
     font-family: 'bebas_neueregular';
     padding: 0px;
     overflow: hidden;
-   
+    position: relative;
 }
 
 .logo-footer{
     background-color: #333333;
-    width: 40%;
+    width: 50%;
     height: auto;
-    margin-left: 230px;
-    margin-top: 10px;
+}
+
+.footer-header{
+    font-family: 'bebas_neueregular';
+    color: white;
+    font-weight: bold;
+    font-size: 25px; 
 }
 
 .footer-text{
-    font-family: 'bebas_neueregular';
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 30px;
+    font-style: italic;  
 }
+
