--- a/templates/application/myapplicants.html.twig
+++ b/templates/application/myapplicants.html.twig
@@ -2,51 +2,54 @@
 
 {% block title %}My Applicants{% endblock %}
 
-{% block body %}
-    <div class="grid-container grid-container-padding">
-        <div class="grid-x grid-padding-x">
-            <div class="small-2 medium-2 large-2">
-                <br>
-                    <img src="{{ user.profilepictureurl }}">
-                </br>
-            </div>
-
-            <div class="small-1 medium-1 large-1">
-            </div>
-
-            <div class="small-9 medium-9 large-9">
-                <br>
-                <div class="titlestyle">Mijn Sollicitanten</div>
-                </br>
-                    <table id="table_id" class="myapplicationstable">
-                        <thead>
-                            <tr>
-                                <th>Datum</th>
-                                <th>Vacature</th>
-                                <th>Sollicitant</th>
-                                <th>Uitnodigen</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for applicant in applicants|sort((a, b) => a.vacancy.function <=> b.vacancy.function) %}
-                            <tr>
-                                <td>{{ applicant.applicationdate|date("d/m/Y") }}</td>
-                                <td>{{ applicant.vacancy.function }}</td>
-                                <td>{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
-                                <td>{% if applicant.invited == false %}
-                                <a type="button" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
-                                Invite
-
-                                {% else %}
-                                <a type="button" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
-                                Uninvite
-                                {% endif %}
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>                           
+{% block logo %}
+    <div class="grid-x">
+        <div class="small-3 medium-3 large-3"></div>
+        <div class="small-6 medium-6 large-6">
+            <br>
+                <img src="{{ user.profilepictureurl }}">
+            </br>
         </div>
+        <div class="small-3 medium-3 large-3"></div>
     </div>
+{% endblock %}
+
+{% block content %}
+    <div class="grid-x">
+        <div class="small-12 medium-12 large-12">
+            <br>
+                <div class="titlestyle">Mijn Sollicitanten</div>
+            </br>
+        </div>
+        
+        <div class="small-12 medium-12 large-12">            
+            <table id="table_id" class="myapplicationstable">
+                <thead>
+                    <tr>
+                        <th>Datum</th>
+                        <th>Vacature</th>
+                        <th>Sollicitant</th>
+                        <th>Uitnodigen</th>   
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for applicant in applicants|sort((a, b) => a.applicationdate <=> b.applicationdate) %}
+                        <tr>
+                            <td>{{ applicant.applicationdate|date("d/m/Y") }}</td>
+                            <td>{{ applicant.vacancy.function }}</td>
+                            <td>{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
+                            <td>{% if applicant.invited == false %}
+                            <a type="button" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
+                            Invite
+
+                            {% else %}
+                            <a type="button" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
+                            Uninvite
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table><br><br>
+        </div>
+    </div>                           
 {% endblock %}
