--- a/templates/global/footer.html.twig
+++ b/templates/global/footer.html.twig
@@ -1,31 +1,23 @@
 {% block footer %}
-   
-    <div class="grid-x triangle">
-        <div class="small-12 medium-12 large-12">
-            <div class"=triangle">
-            </div>
+    
+    <div class="small-12 medium-12 large-12">
+        <div class="triangle">
         </div>
     </div>
     </div>
     
-
-    <div class="footer">
-        <div class="grid-container grid-container-padding">
-            <div class="grid-x grid-x-padding">
-                    <div class="small-6 medium-6 large-6 footer-text">
-                        <span><strong>ADRES</strong></span></br>
-                        <span>Poststraat 2B<br>6135 KR, Sittard</span>
-                        <br>
-                        <br>
-                        <span><strong>PRIVACY</span></strong><br>
-                        <span><em>Lorem ipsum dolor sit amet,<br>consectetur</em></span>
-                    </div>
-                    <div class="small-6 medium-6 large-6">
-                        <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="logo-footer"></a>
-                    </div>
-                </div>
-            </div>
+    <div class="grid-x">
+        <div class="small-6 medium-3 large-3">
+            <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="logo-footer"></a>
         </div>
-    </div>
+    
+        <div class="small-6 medium-2 large-2">
+            <br><span class="footer-header">Adres</span><br>
+            <span class="footer-text">Poststraat 2B<br>6135 KR, Sittard</span>
+        </div>
 
+        <div class="small-6 medium-2 large-2">    
+            <br><span class="footer-header">Privacy</span><br>
+            <span class="footer-text">Lorem ipsum dolor sit amet,<br>consectetur</span>
+        </div>
 {% endblock %}
