--- a/templates/global/header.html.twig
+++ b/templates/global/header.html.twig
@@ -1,23 +1,22 @@
 {% block header %}
-    <div class="header">
-        <div class="grid-container grid-container-padding">
-            <div class="grid-x grid-x-padding">
-                <div class="small-6 medium-6 large-6">
-                    <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>
-                </div>
-                <div class="small-6 medium-6 large-6">
-                    <button class="menu-icon" type="button" data-toggle=""></button>
-                </div>
-            </div>
+    <div class="grid-x">
+        <div class="small-6 medium-3 large-3">
+            <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>  
         </div>
-    </div>
-       
-    <div class="grid-x grid-x-padding">
-        <div class="small-12 medium-12 large-12">
-            <div class="triangle">
-            </div>
-        </div>
-    </div>
-    
+            
+        <div class="small-6 medium-9 large-9 header">
+                {# <div data-responsive-toggle="responsive-menu" data-hide-for="medium large">
+                    <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
+                </div>
 
+                <div class="top-bar" id="responsive-menu">
+                <div class="top-bar-right">
+                <ul class="dropdown menu" data-dropdown-menu> #}
+        </div>
+    </div>
+
+    <div class="small-12 medium-12 large-12">
+        <div class="triangle">
+        </div>
+    </div>
 {% endblock %}
