--- a/templates/homepage/alternative/index.html.twig
+++ b/templates/homepage/alternative/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-althome-login.html.twig' %}
 
 {% block title %}All Available Vacancies{% endblock %}
 
-{% block body %}
+{% block content %}
     
     <table id="table_id" class="althomepagetable">
         <thead>
