--- a/templates/user/employer.html.twig
+++ b/templates/user/employer.html.twig
@@ -2,61 +2,69 @@
 
 {% block title %}{{ profile.companyname }}{% endblock %}
 
-{% block body %}
-    <div class="grid-container grid-container-padding">
-        <div class="grid-x grid-padding-x">
-            <div class="small-2 medium-2 large-2">
-                <br><img src="{{ profile.profilepictureurl }}">
-            </div>
+{% block logo %}
+    <div class="grid-x">
+        <div class="small-3 medium-3 large-3">
+        </div>
+        <div class="small-6 medium-6 large-6">
+            <br><img src="{{ profile.profilepictureurl }}">
+        </div>
+        <div class="small-3 medium-3 large-3">
+        </div>
+    </div>
+{% endblock %}
 
-            <div class="small-1 medium-1 large-1">
-            </div>
 
-            <div class="small-9 medium-9 large-9"> 
-                <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Profiel</h2>
+{% block content %}
+    <div class="grid-x">
+        <div class="small-12 medium-12 large-12">
+            <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Profiel</h2>
 
-                <label>Company Name</label> 
-                <span class="display">{{ profile.companyname }}</span><br>
+            <label>Company Name</label> 
+            <span class="display">{{ profile.companyname }}</span><br>
 
-                <br><label>Contactperson</label> 
-                <span class="display">{{ profile.firstname }} {{ profile.lastname }}</span><br>
+            <br><label>Contactperson</label> 
+            <span class="display">{{ profile.firstname }} {{ profile.lastname }}</span><br>
                 
-                <br><label>Email</label> 
-                <span class="display">{{ profile.email }}</span><br>
+            <br><label>Email</label> 
+            <span class="display">{{ profile.email }}</span><br>
+        </div>
+    </div>  
+    
+    <div class="grid-x">
+        <div class="small-5 medium-5 large-5"> 
+            <br><label>Adres</label> 
+                <span class="display">{{ profile.address }}</span>
+        </div>
 
-                <div class="grid-x grid-x-padding">
-                    <div class="small-3 medium-3 large-3"> 
-                        <br><label>Adres</label> 
-                            <span class="display">{{ profile.address }}</span>
-                    </div>
+        <div class="small-1 medium-1 large-1">
+        </div>
 
-                    <div class="small-1 medium-1 large-1">
-                    </div>
+        <div class="small-6 medium-6 large-6"> 
+            <br><label>Telefoonnummer</label>
+            <span class="display">{{ profile.phonenumber }}</span>
+        </div>
+    </div>
 
-                    <div class="small-8 medium-8 large-8"> 
-                        <br><label>Telefoonnummer</label>
-                            <span class="display">{{ profile.phonenumber }}</span>
-                    </div>
-                </div>
+    <div class="grid-x">
+        <div class="small-5 medium-5 large-5"> 
+            <br><label>Postcode</label> 
+            <span class="display">{{ profile.zipcode }}</span>
+        </div>
 
-                <div class="grid-x grid-x-padding">
-                    <div class="small-3 medium-3 large-3"> 
-                        <br><label>Postcode</label> 
-                            <span class="display">{{ profile.zipcode }}</span>
-                    </div>
+        <div class="small-1 medium-1 large-1">
+        </div>
 
-                    <div class="small-1 medium-1 large-1">
-                    </div>
+        <div class="small-6 medium-6 large-6"> 
+            <br><label>Plaats</label>
+            <span class="display">{{ profile.city }}</span>
+        </div>
+    </div>
 
-                    <div class="small-8 medium-8 large-8"> 
-                        <br><label>Plaats</label>
-                            <span class="display">{{ profile.city }}</span>
-                    </div>
-                </div>
-
-                <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Motivatie</h2>
-                <span class="motivation">{{ profile.description }}</span><br><br><br>
-            </div>
+    <div class="grid-x">
+        <div class="small-12 medium-12 large-12"> 
+            <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Motivatie</h2>
+            <span class="motivation">{{ profile.description }}</span><br><br><br>
         </div>
     </div>
 {% endblock %}
