--- a/public/assets/css/foundation.css
+++ b/public/assets/css/foundation.css
@@ -5399,7 +5399,7 @@ a.thumbnail {
           flex-wrap: wrap; }
   .top-bar,
   .top-bar ul {
-    background-color: #e6e6e6; }
+    background-color: #333333; }
   .top-bar input {
     max-width: 200px;
     margin-right: 1rem; }
