--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -6,21 +6,47 @@
 
 .vacancydatetext{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
+    margin-left: -40px;
+}
+
+.arrowstyle{
+    font-size: 6rem;
+    color: white;
+    opacity: 0.8;
+    padding-top: 50px;
+}
+
+.arrowstyle:hover{
+    opacity: 1.0;
+    color: white;
 }
 
 .functiontext{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 32px;
+    font-size: 30px;
     color: white;
+    opacity: 0.8;
+    margin-left: -40px;
+}
+
+.functiontext:hover{
+    color: white;
+    opacity: 1.0;
+}
+
+.functiontext:hover > .arrowstyle{
+    color: white;
+    opacity: 1.0;
 }
 
 .descriptiontext{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-style: italic; 
     font-weight: bold;
+    margin-left: -40px;
 }
 
 .hexa, .hexa div {
@@ -31,19 +57,18 @@
     height: 300px;
     text-align: center;
     
-            
 }
-/* .hexa {
+.hexa {
     width: 260px;
     height: 184px;
     
 }
 .hexa div {
     width: 90%;
-    height: 100%; */
+    height: 100%;
     
 }
-/* .hexa {
+.hexa {
     transform: rotate(120deg);
     transform: rotate(120deg);
     transform: rotate(120deg);
@@ -59,8 +84,8 @@
     transform: rotate(-60deg);
     transform: rotate(-60deg);
     background: #333333;
-} */
-/* 
+}
+
 .img {
     width: 50%; 
     height: 70%;
@@ -69,4 +94,4 @@
     margin-right: auto;
     background-color: white;
     color: white;
-} */
+}
