--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,11 +3,9 @@
 .header{
     background-color: #333333;
     color: white;
-    height: 10%;
+    height: 15%;
     width: 100%;
     font-family: 'bebas_neueregular';
-    padding: 0px;
-    overflow: hidden;
     position: relative;
 }
 
@@ -17,12 +15,26 @@
     height: auto;
 }
 
+.menu-colors{
+    color: white;
+    font-family: 'bebas_neueregular';
+    font-size: 18px;
+    margin-top: 120px;
+    opacity: 0.8;
+}
+
+.menu-colors:hover{
+    color: white;
+    opacity: 1.0;
+}
+
 .triangle{
     position: relative;
-    height: 50px;
+    height: 20px;
     width: 100%;
     background-color: #F15A24;
     overflow: hidden;
+    transform: rotate(-0.5deg);
 }
 
 /* BODY FEATURES */
@@ -39,11 +51,10 @@
 .footer{
     background-color: #333333;
     color: white;
-    height: 10%;
+    height: 15%;
     width: 100%;
     font-family: 'bebas_neueregular';
     padding: 0px;
-    overflow: hidden;
     position: relative;
 }
 
