--- a/templates/application/myapplications.html.twig
+++ b/templates/application/myapplications.html.twig
@@ -35,13 +35,13 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for application in applications|sort((a, b) => a.vacancydate <=> b.vacancydate) %}
+                    {% for application in applications|sort((a, b) => a.vacancy.vacancydate <=> b.vacancy.vacancydate) %}
                         <tr>
                             <td>{{ application.vacancy.vacancydate|date("d/m/Y") }}</td>
                             <td>{{ application.vacancy.function}}</td>
                             <td>{{ application.vacancy.user.companyname}}</td>
                             <td>{% if application.invited == 1 %}
-                                <i class="fas fa-check" style=" font-size: 2rem"></i></td>                             
+                                <i class="fas fa-check" style=" font-size: 2.5rem"></i></td>                             
                             {% endif %}
                         </tr> 
                     {% endfor %}
