--- a/templates/homepage/alternative/index.html.twig
+++ b/templates/homepage/alternative/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base-althome-login.html.twig' %}
+{% extends 'base-althome.html.twig' %}
 
 {% block title %}All Available Vacancies{% endblock %}
 
