--- a/templates/global/footer.html.twig
+++ b/templates/global/footer.html.twig
@@ -1,11 +1,10 @@
 {% block footer %}
     
     <div class="small-12 medium-12 large-12">
-        <div class="triangle">
+        <div class="triangle-footer triangle-footer-homepage">
         </div>
     </div>
-    </div>
-    
+   
     <div class="grid-x">
         <div class="small-6 medium-3 large-3">
             <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="logo-footer"></a>
@@ -20,4 +19,5 @@
             <br><span class="footer-header">Privacy</span><br>
             <span class="footer-text">Lorem ipsum dolor sit amet,<br>consectetur</span>
         </div>
+    </div>
 {% endblock %}
