--- a/templates/global/header.html.twig
+++ b/templates/global/header.html.twig
@@ -85,7 +85,7 @@
     </div> #}
 
     <div class="small-12 medium-12 large-12">
-        <div class="triangle">
+        <div class="triangle triangle-homepage">
         </div>
     </div>
 {% endblock %}
