--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,7 +3,7 @@
 .header{
     background-color: #333333;
     color: white;
-    height: 15%;
+    height: 10%;
     width: 100%;
     font-family: 'bebas_neueregular';
     position: relative;
@@ -19,7 +19,7 @@
     color: white;
     font-family: 'bebas_neueregular';
     font-size: 18px;
-    margin-top: 120px;
+    margin-top: 140px;
     opacity: 0.8;
 }
 
@@ -28,14 +28,20 @@
     opacity: 1.0;
 }
 
-.triangle{
-    position: relative;
-    height: 20px;
+.triangle {
     width: 100%;
-    background-color: #F15A24;
-    overflow: hidden;
-    transform: rotate(-0.5deg);
+    height: 30px;
+    background: rgb(241,90,36);
+    background: linear-gradient(179.5deg, rgba(241,90,36,1) 0%, rgba(241,90,36,1) 50%, rgba(171,65,27,1) 51%, rgba(255,255,255,1) 60%, rgba(255,255,255,1) 100%);
 }
+
+.triangle-footer{
+    width: 100%;
+    height: 30px;
+    background: rgb(241,90,36);
+    background: linear-gradient(359.5deg, rgba(241,90,36,1) 0%, rgba(241,90,36,1) 50%, rgba(171,65,27,1) 51%, rgba(255,255,255,1) 60%, rgba(255,255,255,1) 100%);
+}
+
 
 /* BODY FEATURES */
 
@@ -51,7 +57,7 @@
 .footer{
     background-color: #333333;
     color: white;
-    height: 15%;
+    height: 10%;
     width: 100%;
     font-family: 'bebas_neueregular';
     padding: 0px;
@@ -76,4 +82,11 @@
     color: white;
     font-style: italic;  
 }
+
+.hexagon{
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    width: 150px;
+    height: 150px;
+}
+
 
