--- a/templates/application/myapplicants.html.twig
+++ b/templates/application/myapplicants.html.twig
@@ -6,9 +6,9 @@
     <div class="grid-x">
         <div class="small-3 medium-3 large-3"></div>
         <div class="small-6 medium-6 large-6">
-            <br>
+            <br><div class="hexagon">
                 <img src="{{ user.profilepictureurl }}">
-            </br>
+            </div>
         </div>
         <div class="small-3 medium-3 large-3"></div>
     </div>
