--- a/templates/application/myapplications.html.twig
+++ b/templates/application/myapplications.html.twig
@@ -8,7 +8,9 @@
         <div class="small-3 medium-3 large-3"></div>
         <div class="small-6 medium-6 large-6">
             <br>
-                <img src="{{ user.profilepictureurl }}">
+                <div class="hexagon">
+                    <img class="sizedimg" src="{{ user.profilepictureurl }}">
+                </div>
             </br>
         </div>
         <div class="small-3 medium-3 large-3"></div>
