--- a/templates/base-homepage.html.twig
+++ b/templates/base-homepage.html.twig
@@ -14,37 +14,35 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/zf/dt-1.10.21/datatables.min.css"/>                
         <link rel="stylesheet" href="{{ asset('assets/css/main.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/homepage.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/vegas/vegas.min.css')}}">
         
         {% endblock %}
     
         <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        
         <script src="{{ asset('assets/js/foundation.js')}}"></script>
+        <script>$(document).ready(function(){
+                $(document).foundation();
+                });
+        </script>
         <script src="{{ asset('assets/js/vendor.js')}}"></script>
         <script src="{{ asset('assets/js/all.js')}}"></script>
         <script src="{{ asset('assets/js/jquery.richtext.js')}}"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/v/zf/dt-1.10.21/datatables.min.js"></script>
-        <script>$(document).ready(function(){$('#table_id').DataTable(
-            {
+        <script>$(document).ready(function(){$('#table_id').DataTable({
                 "paging": false,
                 "searching": false,
                 "info": false,
                 "ordering": false
-            });
-            });
+                });
+                });
         </script>
-
-        <script>
-            $(document).ready(function(){
-                $(document).foundation();
-            });
-        </script>
-    
-
-
+        <script src="{{ asset('assets/vegas/vegas.js')}}"></script>              
     </head>
+    
     <body>
         <div class="header">
-            <div class="grid-x grid-padding-x">
+            <div class="grid-x">
                 <div class="small-12 medium-12 large-12"> 
                     <div id="header">
                         {% include('global/header.html.twig') %}
@@ -54,10 +52,8 @@
         </div>
 
         <div class="layout">
-            <div class="grid-x">
-                <div class="small-1 medium-1 large-1">
-                </div>
-                <div class="small-10 medium-10 large-10">
+            <div class="grid-x orangebackground">
+                <div class="small-11 medium-11 large-11">
                     {% block content %}
                     {% endblock %}
                 </div>
@@ -67,7 +63,7 @@
         </div>
        
         <div class="footer">
-            <div class="grid-x grid-padding-x">
+            <div class="grid-x">
                 <div class="small-12 medium-12 large-12"> 
                     <div id="footer">
                         {% include('global/footer.html.twig') %}
@@ -77,3 +73,4 @@
         </div>
     </body>  
 </html>
+
