--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -7,7 +7,9 @@
         <div class="small-3 medium-3 large-3">
         </div>
         <div class="small-6 medium-6 large-6">
-            <br><img src="{{ profile.profilepictureurl }}">
+            <br><div class="hexagon">
+                <img src="{{ profile.profilepictureurl }}">
+            </div>
         </div>
         <div class="small-3 medium-3 large-3">
         </div>
