--- a/templates/vacancy/showvacancy.html.twig
+++ b/templates/vacancy/showvacancy.html.twig
@@ -7,7 +7,9 @@
         <div class="small-3 medium-3 large-3">
         </div>
         <div class="small-6 medium-6 large-6">
-            <br><img src="{{ vacancy.platform.iconurl }}">
+            <br><div class="hexagon">
+                <img src="{{ vacancy.platform.iconurl }}">
+            </div>
         </div>
         <div class="small-3 medium-3 large-3">
         </div>
@@ -16,7 +18,7 @@
         <div class="small-3 medium-3 large-3">
         </div>
         <div class="small-6 medium-6 large-6">
-            <img src="{{ vacancy.user.profilepictureurl }}">
+           <br><img class="sizedimg" src="{{ vacancy.user.profilepictureurl }}">
         </div>
         <div class="small-3 medium-3 large-3">
         </div>
@@ -27,7 +29,7 @@
 {% block content %}
     <div class="grid-x">
         <div class="small-12 medium-12 large-12">
-            <br><span class="datestyle">{{ vacancy.vacancydate|date("d/m/Y") }}</span>
+            <br><br><span class="datestyle">{{ vacancy.vacancydate|date("d/m/Y") }}</span>
             <span><h2>{{ vacancy.function }} voor {{ vacancy.user.companyname }}</h2></span>
         </div>
     </div>
