--- a/templates/application/myapplicants.html.twig
+++ b/templates/application/myapplicants.html.twig
@@ -7,7 +7,7 @@
         <div class="small-3 medium-3 large-3"></div>
         <div class="small-6 medium-6 large-6">
             <br><div class="hexagon">
-                <img src="{{ user.profilepictureurl }}">
+                 <a href="/userprofile/show/{{user.id}}"><img src="{{ user.profilepictureurl }}"></a>
             </div>
         </div>
         <div class="small-3 medium-3 large-3"></div>
@@ -36,20 +36,20 @@
                     {% for applicant in applicants|sort((a, b) => a.applicationdate <=> b.applicationdate) %}
                         <tr>
                             <td>{{ applicant.applicationdate|date("d/m/Y") }}</td>
-                            <td>{{ applicant.vacancy.function }}</td>
-                            <td>{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
+                            <td><a href="/vacancy/show/{{applicant.vacancy.id}}" class="orangetext">{{ applicant.vacancy.function }}</a></td>
+                            <td><a href="/userprofile/show/{{applicant.user.id}}" class="greytext">{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
                             <td>{% if applicant.invited == false %}
-                            <a type="button" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
-                            Invite
+                            <a type="button" class="btn btn-success orangetext" <a href="application/invitation/{{applicant.id}}">
+                            Invite</a> 
 
                             {% else %}
-                            <a type="button" class="btn btn-success" <a href="application/invitation/{{applicant.id}}">
-                            Uninvite
+                            <a type="button" class="btn btn-success orangetext" <a href="application/invitation/{{applicant.id}}">
+                            Uninvite</a>
                             {% endif %}
                         </tr>
                     {% endfor %}
                 </tbody>
-            </table><br><br>
+            </table><br><br><br><br><br>
         </div>
     </div>                           
 {% endblock %}
