--- a/templates/application/myapplications.html.twig
+++ b/templates/application/myapplications.html.twig
@@ -9,7 +9,7 @@
         <div class="small-6 medium-6 large-6">
             <br>
                 <div class="hexagon">
-                    <img class="sizedimg" src="{{ user.profilepictureurl }}">
+                    <a href="/userprofile/show/{{user.id}}"><img class="sizedimg" src="{{ user.profilepictureurl }}"></a>
                 </div>
             </br>
         </div>
@@ -40,10 +40,10 @@
                     {% for application in applications|sort((a, b) => a.vacancy.vacancydate <=> b.vacancy.vacancydate) %}
                         <tr>
                             <td>{{ application.vacancy.vacancydate|date("d/m/Y") }}</td>
-                            <td>{{ application.vacancy.function}}</td>
-                            <td>{{ application.vacancy.user.companyname}}</td>
-                            <td>{% if application.invited == 1 %}
-                                <i class="fas fa-check" style=" font-size: 2.5rem"></i></td>                             
+                            <td><a href="/vacancy/show/{{application.vacancy.id}}" class="orangetext">{{ application.vacancy.function}}</a></td>
+                            <td><a href="/userprofile/show/{{application.vacancy.user.id}}" class="greytext">{{ application.vacancy.user.companyname}}</a></td>
+                            <td><a href="/vacancy/show/{{application.vacancy.id}}" class="orangetext">{% if application.invited == 1 %}
+                                <i class="fas fa-check" style=" font-size: 2.5rem"></i></a></td>                             
                             {% endif %}
                         </tr> 
                     {% endfor %}
