--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -90,7 +90,7 @@
     <div class="grid-x profile-edit">
         <div class="small-3 medium-3 large-3"> 
             <br><label>Geboortedatum</label> 
-            <input type="text" id="dateofbirth" name="dateofbirth" value="{{ user.dateofbirth }}"/>
+            <input type="text" id="dateofbirth" name="dateofbirth" value="{{ user.dateofbirth|date("d/m/Y") }}"/>
         </div>
 
         <div class="small-1 medium-1 large-1">
